fix text-align for Benefit cards

--- a/src/Components/HeroBenefits/Card/Card.module.scss
+++ b/src/Components/HeroBenefits/Card/Card.module.scss
@@ -35,7 +35,6 @@
 			font-weight: 400;
 			line-height: 24px;
 			color: #FFFFFF;
-			text-align: center;
 			flex: 1;
 			width: 100%;
 		}
